--- a/part2/phonebook/package.json
+++ b/part2/phonebook/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "part1",
+  "name": "phonebook",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -11,7 +11,7 @@
     "server": "json-server -p3001 --watch db.json"
   },
   "dependencies": {
-    "axios": "^1.6.5",
+    "axios": "^1.6.7",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
